--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@ ul {
 .main-container {
 	padding: 2rem;
 	min-height: 100vh;
-	background-color: #9a9a9a;
+	background-color: rgb(20, 17, 32);
 	color: #fff;
 	display: flex;
 	flex-direction: column;
